--- a/src/imageSegmentation/Scene1.fxml
+++ b/src/imageSegmentation/Scene1.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.Pane?>
 
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="imageSegmentation.Scene1Controller">
@@ -9,6 +10,6 @@
       <Button fx:id="selectImageButton" layoutX="285.0" layoutY="459.0" mnemonicParsing="false" onAction="#selectImageButtonAction" text="Select Image" />
       <TextField fx:id="filePathTextField" layoutX="285.0" layoutY="426.0" promptText="Enter file path" />
       <Button fx:id="browseButton" layoutX="452.0" layoutY="426.0" mnemonicParsing="false" onAction="#browseButtonAction" text="Browse" />
-      <Pane fx:id="imageDisplayPane" layoutX="94.0" layoutY="14.0" prefHeight="410.0" prefWidth="612.0" />
+      <ImageView fx:id="inputImageView" fitHeight="361.0" fitWidth="495.0" layoutX="121.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true" />
    </children>
 </Pane>
